[gd_scene load_steps=2 format=3 uid="uid://bdqj6a3vp52kk"]

[ext_resource type="Script" path="res://Scripts/Components/stat_card.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_card"]
bg_color = Color(0.15, 0.15, 0.2, 0.95)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 0.3)
shadow_size = 4

[node name="StatCard" type="PanelContainer"]
custom_minimum_size = Vector2(200, 120)
theme_override_styles/panel = SubResource("StyleBoxFlat_card")
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 10

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="StatLabel" type="Label" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.7, 0.7, 0.8, 1)
text = "SCORE"
horizontal_alignment = 1

[node name="ValueLabel" type="Label" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "1,234,567"
horizontal_alignment = 1

[node name="ComparisonLabel" type="Label" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "+12,345 â†‘"
horizontal_alignment = 1
